--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -24,6 +24,9 @@
     "    -   3.4 Split Data\n",
     "    -   3.5 Scale Numerical Features\n",
     "4.  **Model Training**\n",
+    "    -   4.1 \n",
+    "    -   4.2 \n",
+    "    -   4.3 \n",
     "5.  **Hyperparameter Tuning**\n",
     "6.  **Model Evaluation & Comparison**"
    ]
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "id": "48cab40f",
    "metadata": {},
    "outputs": [
@@ -84,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "id": "05c9a498",
    "metadata": {},
    "outputs": [
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "id": "477c3dba",
    "metadata": {},
    "outputs": [
@@ -133,7 +136,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "id": "7d11a078",
    "metadata": {},
    "outputs": [
@@ -175,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "id": "1208affe",
    "metadata": {},
    "outputs": [
@@ -335,7 +338,7 @@
        "4             0             0              40           Cuba       0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "id": "dc0c67be",
    "metadata": {},
    "outputs": [
@@ -395,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "id": "09b7ae08",
    "metadata": {},
    "outputs": [
@@ -536,7 +539,7 @@
        "max         99.000000      1.000000  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 67,
    "id": "2aa1c067",
    "metadata": {},
    "outputs": [
@@ -595,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 68,
    "id": "bd7a6fbc",
    "metadata": {},
    "outputs": [
@@ -626,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 69,
    "id": "666d1275",
    "metadata": {},
    "outputs": [
@@ -673,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "id": "7f345c50",
    "metadata": {},
    "outputs": [
@@ -717,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "id": "1b8c92dc",
    "metadata": {},
    "outputs": [
@@ -768,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "id": "661c9095",
    "metadata": {},
    "outputs": [
@@ -833,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 73,
    "id": "4fdf9b5d",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "id": "7efd06d1",
    "metadata": {},
    "outputs": [],
@@ -1024,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "id": "40cca5cf",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
    "id": "4d85722c",
    "metadata": {},
    "outputs": [
@@ -1078,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 77,
    "id": "60c5aaf7",
    "metadata": {},
    "outputs": [
@@ -1130,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 78,
    "id": "68707943",
    "metadata": {},
    "outputs": [
@@ -1158,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 79,
    "id": "146804ce",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 80,
    "id": "2a3bb598",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 81,
    "id": "9696c99f",
    "metadata": {},
    "outputs": [],
@@ -1226,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 82,
    "id": "6bb8ba34",
    "metadata": {},
    "outputs": [
@@ -1332,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 83,
    "id": "17922581",
    "metadata": {},
    "outputs": [
@@ -1403,7 +1406,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.134673</td>\n",
+       "      <td>0.133958</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1427,7 +1430,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.483452</td>\n",
+       "      <td>0.489329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1451,7 +1454,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.063830</td>\n",
+       "      <td>0.064607</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1475,7 +1478,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.068681</td>\n",
+       "      <td>0.066908</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1499,7 +1502,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.447080</td>\n",
+       "      <td>0.449619</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1543,16 +1546,16 @@
        "4                     0.0                      0.0         1.0         0.0   \n",
        "\n",
        "   sex_Female  occupation_target  \n",
-       "0         0.0           0.134673  \n",
-       "1         0.0           0.483452  \n",
-       "2         0.0           0.063830  \n",
-       "3         0.0           0.068681  \n",
-       "4         1.0           0.447080  \n",
+       "0         0.0           0.133958  \n",
+       "1         0.0           0.489329  \n",
+       "2         0.0           0.064607  \n",
+       "3         0.0           0.066908  \n",
+       "4         1.0           0.449619  \n",
        "\n",
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1589,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "id": "fa9c2bc2",
    "metadata": {},
    "outputs": [
@@ -1645,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "id": "fb686100",
    "metadata": {},
    "outputs": [
@@ -1666,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 86,
    "id": "e4683b50",
    "metadata": {},
    "outputs": [
@@ -1678,8 +1681,8 @@
       "X_test shape: (6507, 26)\n",
       "y_train shape: (26030,)\n",
       "y_test shape: (6507,)\n",
-      "Train class balance: 0.24053015751056472\n",
-      "Test class balance: 0.2425080682342093\n"
+      "Train class balance: 0.2389934690741452\n",
+      "Test class balance: 0.24865529429844782\n"
      ]
     }
    ],
@@ -1719,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 87,
    "id": "27b245df",
    "metadata": {},
    "outputs": [
@@ -1783,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 88,
    "id": "80395193",
    "metadata": {},
    "outputs": [
@@ -1794,7 +1797,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[58], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01moptimizers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GDOptimizer\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtraining\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ModelTraining, GridSearch\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m accuracy, precision_score, recall_score, f1_score\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# model params\u001b[39;00m\n\u001b[0;32m     11\u001b[0m y_train_svm \u001b[38;5;241m=\u001b[39m y_train\u001b[38;5;241m.\u001b[39mcopy()\n",
+      "Cell \u001b[1;32mIn[88], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01moptimizers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GDOptimizer\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtraining\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ModelTraining, GridSearch\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m accuracy, precision_score, recall_score, f1_score\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# model params\u001b[39;00m\n\u001b[0;32m     11\u001b[0m y_train_svm \u001b[38;5;241m=\u001b[39m y_train\u001b[38;5;241m.\u001b[39mcopy()\n",
       "\u001b[1;31mImportError\u001b[0m: cannot import name 'f1_score' from 'utils.metrics' (f:\\临时存放\\AML---final-project\\AppliedML\\courselib\\utils\\metrics.py)"
      ]
     }
@@ -2386,16 +2389,28 @@
    "execution_count": null,
    "id": "48f9f5a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'models_to_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[59], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# === Analyze coefficients from Logistic Regression ===\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Retrieve the trained Logistic Regression model from ModelTraining wrapper\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m logreg \u001b[38;5;241m=\u001b[39m \u001b[43mmodels_to_train\u001b[49m[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mmodel\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Extract the weight vector and feature names\u001b[39;00m\n\u001b[0;32m      7\u001b[0m coefs \u001b[38;5;241m=\u001b[39m logreg\u001b[38;5;241m.\u001b[39mw\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'models_to_train' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# === Analyze coefficients from Logistic Regression ===\n",
     "\n",
-    "# Retrieve the trained Logistic Regression model\n",
-    "logreg = models['Logistic Regression']\n",
+    "# Retrieve the trained Logistic Regression model from ModelTraining wrapper\n",
+    "logreg = models_to_train[0].model\n",
     "\n",
     "# Extract the weight vector and feature names\n",
     "coefs = logreg.w\n",
-    "feature_names = df_encoded.drop(columns='income').columns\n",
+    "feature_names = X_columns\n",
     "\n",
     "# Create a DataFrame for easier inspection\n",
     "coef_df = pd.DataFrame({'feature': feature_names, 'coefficient': coefs})\n",
