more small fixes with the gridsearch

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2158,7 +2158,7 @@
     "    # train the model using the params defined in the dict\n",
     "    model_to_train.train(X_train_scaled, y_train, X_test_scaled, y_test)\n",
     "    \n",
-    "    # Plot training history\n",
+    "    # plot training metrics (accuracy and loss for train/test)\n",
     "    if model_to_train.history:\n",
     "        print(100*'=')\n",
     "        plot_training_history(model_to_train.history, model_to_train.model_name)\n",
@@ -2282,16 +2282,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d50b506",
+   "metadata": {},
+   "source": [
+    "### 4.2 Compare different regularized versions of Logistic Regression"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7804c8f3",
+   "execution_count": 320,
+   "id": "20652731",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model configurations\n",
+    "logreg_configs = [\n",
+    "    {\n",
+    "        'model_class': LogisticRegression,\n",
+    "        'model_name': 'Logistic Regression (Base)',\n",
+    "        'init_params': {\n",
+    "            'w': w_init.copy(), \n",
+    "            'b': b_init, \n",
+    "            'optimizer': GDOptimizer(learning_rate=0.01),\n",
+    "            'penalty': 'none',\n",
+    "            'lam': 0.0\n",
+    "        },\n",
+    "        'fit_params': {'num_epochs': 20, 'batch_size': 32}\n",
+    "    },\n",
+    "    {\n",
+    "        'model_class': LogisticRegression,\n",
+    "        'model_name': 'Logistic Regression (Weak Lasso)',\n",
+    "        'init_params': {\n",
+    "            'w': w_init.copy(), \n",
+    "            'b': b_init, \n",
+    "            'optimizer': GDOptimizer(learning_rate=0.01),\n",
+    "            'penalty': 'lasso',\n",
+    "            'lam': 0.1\n",
+    "        },\n",
+    "        'fit_params': {'num_epochs': 20, 'batch_size': 32}\n",
+    "    },   \n",
+    "    {\n",
+    "        'model_class': LogisticRegression,\n",
+    "        'model_name': 'Logistic Regression (Lasso)',\n",
+    "        'init_params': {\n",
+    "            'w': w_init.copy(), \n",
+    "            'b': b_init, \n",
+    "            'optimizer': GDOptimizer(learning_rate=0.01),\n",
+    "            'penalty': 'lasso',\n",
+    "            'lam': 0.5\n",
+    "        },\n",
+    "        'fit_params': {'num_epochs': 20, 'batch_size': 32}\n",
+    "    },\n",
+    "    {\n",
+    "        'model_class': LogisticRegression,\n",
+    "        'model_name': 'Logistic Regression (Strong Lasso)',\n",
+    "        'init_params': {\n",
+    "            'w': w_init.copy(), \n",
+    "            'b': b_init, \n",
+    "            'optimizer': GDOptimizer(learning_rate=0.01),\n",
+    "            'penalty': 'lasso',\n",
+    "            'lam': 1\n",
+    "        },\n",
+    "        'fit_params': {'num_epochs': 20, 'batch_size': 32}\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# specify the logreg models to train\n",
+    "logreg_models_to_train = []\n",
+    "for logreg_config in logreg_configs:\n",
+    "    logreg_model_to_train = ModelTraining(\n",
+    "        model_class=logreg_config['model_class'],\n",
+    "        model_name=logreg_config['model_name'],\n",
+    "        init_params=logreg_config['init_params'],\n",
+    "        metrics_dict=metrics_dict,\n",
+    "        plot_cm=False,\n",
+    "        **logreg_config['fit_params']\n",
+    "    )\n",
+    "    logreg_models_to_train.append(logreg_model_to_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "id": "9968980a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV for Logistic Regression with 5 folds\n",
+      "CV for Logistic Regression (Base) with 5 folds\n",
+      "Fold 1\n",
+      "Fold 2\n",
+      "Fold 3\n",
+      "Fold 4\n",
+      "Fold 5\n",
+      "============================================================\n",
+      "CV for Logistic Regression (Weak Lasso) with 5 folds\n",
+      "Fold 1\n",
+      "Fold 2\n",
+      "Fold 3\n",
+      "Fold 4\n",
+      "Fold 5\n",
+      "============================================================\n",
+      "CV for Logistic Regression (Lasso) with 5 folds\n",
+      "Fold 1\n",
+      "Fold 2\n",
+      "Fold 3\n",
+      "Fold 4\n",
+      "Fold 5\n",
+      "============================================================\n",
+      "CV for Logistic Regression (Strong Lasso) with 5 folds\n",
       "Fold 1\n",
       "Fold 2\n",
       "Fold 3\n",
@@ -2304,9 +2406,9 @@
    "source": [
     "# train the models via 5-fold cv now\n",
     "all_cv_results = []\n",
-    "for model_to_train in models_to_train:\n",
+    "for logreg_model_to_train in logreg_models_to_train:\n",
     "    # k-fold cross-validation for current model\n",
-    "    cv_result = model_to_train.cross_validate(X_train_scaled, y_train, k_folds=5)\n",
+    "    cv_result = logreg_model_to_train.cross_validate(X_train_scaled, y_train, k_folds=5)\n",
     "    all_cv_results.append(cv_result)\n",
     "    print(\"=\"*60)"
    ]
@@ -2380,24 +2482,60 @@
          "type": "float"
         }
        ],
-       "ref": "37eb5756-036f-4bf8-91cc-718084900e61",
+       "ref": "432f8a7c-7af9-488c-becb-95a74bede588",
        "rows": [
         [
          "0",
-         "Logistic Regression",
-         "83.60353438340375",
-         "0.2808926071522245",
-         "0.7010865477111228",
-         "0.021615333414358805",
-         "0.5502866367104349",
-         "0.017241503975488726",
-         "1.347054386138916",
-         "0.4764050146976302"
+         "Logistic Regression (Base)",
+         "83.6688436419516",
+         "0.2964355239932483",
+         "0.7092264286560284",
+         "0.01768478926788971",
+         "0.5404022354849035",
+         "0.009759955915721276",
+         "0.7794625759124756",
+         "0.18664345252764458"
+        ],
+        [
+         "1",
+         "Logistic Regression (Weak Lasso)",
+         "76.01229350749136",
+         "0.30719358896202154",
+         "0.0",
+         "0.0",
+         "0.0",
+         "0.0",
+         "0.884272575378418",
+         "0.16261526727388462"
+        ],
+        [
+         "2",
+         "Logistic Regression (Lasso)",
+         "76.01229350749136",
+         "0.3492375928502049",
+         "0.0",
+         "0.0",
+         "0.0",
+         "0.0",
+         "1.19234299659729",
+         "0.13554811393260796"
+        ],
+        [
+         "3",
+         "Logistic Regression (Strong Lasso)",
+         "76.01229350749136",
+         "0.32584499052847254",
+         "0.0",
+         "0.0",
+         "0.0",
+         "0.0",
+         "0.863438081741333",
+         "0.17747534768246795"
         ]
        ],
        "shape": {
         "columns": 9,
-        "rows": 1
+        "rows": 4
        }
       },
       "text/html": [
@@ -2433,29 +2571,74 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Logistic Regression</td>\n",
-       "      <td>83.603534</td>\n",
-       "      <td>0.280893</td>\n",
-       "      <td>0.701087</td>\n",
-       "      <td>0.021615</td>\n",
-       "      <td>0.550287</td>\n",
-       "      <td>0.017242</td>\n",
-       "      <td>1.347054</td>\n",
-       "      <td>0.476405</td>\n",
+       "      <td>Logistic Regression (Base)</td>\n",
+       "      <td>83.668844</td>\n",
+       "      <td>0.296436</td>\n",
+       "      <td>0.709226</td>\n",
+       "      <td>0.017685</td>\n",
+       "      <td>0.540402</td>\n",
+       "      <td>0.00976</td>\n",
+       "      <td>0.779463</td>\n",
+       "      <td>0.186643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Logistic Regression (Weak Lasso)</td>\n",
+       "      <td>76.012294</td>\n",
+       "      <td>0.307194</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.884273</td>\n",
+       "      <td>0.162615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Logistic Regression (Lasso)</td>\n",
+       "      <td>76.012294</td>\n",
+       "      <td>0.349238</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>1.192343</td>\n",
+       "      <td>0.135548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Logistic Regression (Strong Lasso)</td>\n",
+       "      <td>76.012294</td>\n",
+       "      <td>0.325845</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.863438</td>\n",
+       "      <td>0.177475</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 Model  Mean Accuracy  Std Accuracy  Mean Precision  \\\n",
-       "0  Logistic Regression      83.603534      0.280893        0.701087   \n",
+       "                                Model  Mean Accuracy  Std Accuracy  \\\n",
+       "0          Logistic Regression (Base)      83.668844      0.296436   \n",
+       "1    Logistic Regression (Weak Lasso)      76.012294      0.307194   \n",
+       "2         Logistic Regression (Lasso)      76.012294      0.349238   \n",
+       "3  Logistic Regression (Strong Lasso)      76.012294      0.325845   \n",
        "\n",
-       "   Std Precision  Mean Recall  Std Recall  Mean Training Time (s)  \\\n",
-       "0       0.021615     0.550287    0.017242                1.347054   \n",
+       "   Mean Precision  Std Precision  Mean Recall  Std Recall  \\\n",
+       "0        0.709226       0.017685     0.540402     0.00976   \n",
+       "1        0.000000       0.000000     0.000000     0.00000   \n",
+       "2        0.000000       0.000000     0.000000     0.00000   \n",
+       "3        0.000000       0.000000     0.000000     0.00000   \n",
        "\n",
-       "   Std Training Time (s)  \n",
-       "0               0.476405  "
+       "   Mean Training Time (s)  Std Training Time (s)  \n",
+       "0                0.779463               0.186643  \n",
+       "1                0.884273               0.162615  \n",
+       "2                1.192343               0.135548  \n",
+       "3                0.863438               0.177475  "
       ]
      },
      "metadata": {},
@@ -2463,9 +2646,8 @@
     }
    ],
    "source": [
-    "# final summary of the cv\n",
+    "# final summary of the cv pf all models tested\n",
     "cv_results_df = pd.DataFrame(all_cv_results)\n",
-    "print(\"\\n--- Overall Cross-Validation Summary ---\")\n",
     "display(cv_results_df)"
    ]
   },
@@ -2499,7 +2681,7 @@
     "# parameter grids for each model\n",
     "param_grids = {\n",
     "    \"Logistic Regression\": {\n",
-    "        \"learning_rate\": [0.001, 0.01, 0.1, 1],\n",
+    "        \"lr\": [0.001, 0.01, 0.1, 1],\n",
     "        \"num_epochs\": [10, 20],\n",
     "        \"batch_size\": [16, 32]\n",
     "    },\n",
@@ -2510,16 +2692,7 @@
     "    #     \"num_epochs\": [5, 10],\n",
     "    #     \"batch_size\": [16, 32]\n",
     "    # }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80e5658e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "}\n",
     "# gridsearch configs for each model\n",
     "models_for_grid = [\n",
     "    {\n",
@@ -2549,61 +2722,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "31affa04",
+   "execution_count": 312,
+   "id": "17d239ca",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grid Search for: Logistic Regression\n"
+      "Simple Grid Search for: Logistic Regression\n"
      ]
     },
     {
      "ename": "TypeError",
-     "evalue": "TrainableModel.fit() got an unexpected keyword argument 'class_labels'",
+     "evalue": "LogisticRegression.__init__() got an unexpected keyword argument 'lr'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[283], line 26\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m params\n\u001b[0;32m     24\u001b[0m grid\u001b[38;5;241m.\u001b[39mpreprocess_params \u001b[38;5;241m=\u001b[39m preprocess_params  \u001b[38;5;66;03m# If your GridSearch supports this hook\u001b[39;00m\n\u001b[1;32m---> 26\u001b[0m \u001b[43mgrid\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train_scaled\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_val\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mX_test_scaled\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_val\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBest Params:\u001b[39m\u001b[38;5;124m\"\u001b[39m, grid\u001b[38;5;241m.\u001b[39mbest_params_)\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBest Score:\u001b[39m\u001b[38;5;124m\"\u001b[39m, grid\u001b[38;5;241m.\u001b[39mbest_score_)\n",
-      "File \u001b[1;32mc:\\Users\\janne\\Google Drive\\Master 2\\AML\\github_code\\final_project\\AML---final-project\\AppliedML\\courselib\\utils\\training.py:192\u001b[0m, in \u001b[0;36mGridSearch.fit\u001b[1;34m(self, X, y, X_val, y_val)\u001b[0m\n\u001b[0;32m    189\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_class(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39minit_params)\n\u001b[0;32m    191\u001b[0m \u001b[38;5;66;03m# Use the correct variable names X and y from the method arguments\u001b[39;00m\n\u001b[1;32m--> 192\u001b[0m model\u001b[38;5;241m.\u001b[39mfit(X, y, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mfit_params)\n\u001b[0;32m    194\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m model(X_val)\n\u001b[0;32m    196\u001b[0m \u001b[38;5;66;03m# Handle SVM label conversion for scoring if necessary\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: TrainableModel.fit() got an unexpected keyword argument 'class_labels'"
+      "Cell \u001b[1;32mIn[312], line 14\u001b[0m\n\u001b[0;32m      7\u001b[0m         param_grid[k] \u001b[38;5;241m=\u001b[39m [v]\n\u001b[0;32m      9\u001b[0m search \u001b[38;5;241m=\u001b[39m SimpleGridSearch(\n\u001b[0;32m     10\u001b[0m     model_class\u001b[38;5;241m=\u001b[39mmodel_cfg[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel_class\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m     11\u001b[0m     param_grid\u001b[38;5;241m=\u001b[39mparam_grid,\n\u001b[0;32m     12\u001b[0m     scoring\u001b[38;5;241m=\u001b[39maccuracy_score\n\u001b[0;32m     13\u001b[0m )\n\u001b[1;32m---> 14\u001b[0m \u001b[43msearch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train_scaled\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_val\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mX_test_scaled\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_val\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBest Params:\u001b[39m\u001b[38;5;124m\"\u001b[39m, search\u001b[38;5;241m.\u001b[39mbest_params_)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBest Score:\u001b[39m\u001b[38;5;124m\"\u001b[39m, search\u001b[38;5;241m.\u001b[39mbest_score_)\n",
+      "File \u001b[1;32mc:\\Users\\janne\\Google Drive\\Master 2\\AML\\github_code\\final_project\\AML---final-project\\AppliedML\\courselib\\utils\\training.py:234\u001b[0m, in \u001b[0;36mfit\u001b[1;34m(self, X, y, X_val, y_val)\u001b[0m\n\u001b[0;32m      0\u001b[0m <Error retrieving source code with stack_data see ipython/ipython#13598>\n",
+      "\u001b[1;31mTypeError\u001b[0m: LogisticRegression.__init__() got an unexpected keyword argument 'lr'"
      ]
     }
    ],
    "source": [
-    "# run grid search for each model\n",
+    "# Run simple grid search for each model\n",
     "for model_cfg in models_for_grid:\n",
-    "    print(f\"Grid Search for: {model_cfg['name']}\")\n",
+    "    print(f\"Simple Grid Search for: {model_cfg['name']}\")\n",
+    "    param_grid = {**model_cfg[\"param_grid\"]}\n",
+    "    for k, v in model_cfg[\"init_params\"].items():\n",
+    "        if v is not None:\n",
+    "            param_grid[k] = [v]\n",
     "\n",
-    "    # courselib gridsearch\n",
-    "    grid = GridSearch(\n",
+    "    search = SimpleGridSearch(\n",
     "        model_class=model_cfg[\"model_class\"],\n",
-    "        param_grid=model_cfg[\"param_grid\"],\n",
-    "        fixed_params=model_cfg[\"init_params\"],\n",
-    "        scoring=\"accuracy\"\n",
+    "        param_grid=param_grid,\n",
+    "        scoring=accuracy_score\n",
     "    )\n",
-    "    # for SVM: convert y_train to {-1, 1}\n",
-    "    y_train_grid = y_train.copy()\n",
-    "    if model_cfg[\"name\"] == \"Linear SVM\":\n",
-    "        y_train_grid = y_train_grid.copy()\n",
-    "        y_train_grid[y_train_grid == 0] = -1\n",
-    "\n",
-    "    # If optimizer is a grid param, handle it\n",
-    "    def preprocess_params(params):\n",
-    "        if \"learning_rate\" in params:\n",
-    "            params[\"optimizer\"] = GDOptimizer(learning_rate=params.pop(\"learning_rate\"))\n",
-    "        return params\n",
-    "\n",
-    "    grid.preprocess_params = preprocess_params  # If your GridSearch supports this hook\n",
-    "\n",
-    "    grid.fit(X_train_scaled, y_train_grid, X_val=X_test_scaled, y_val=y_test)\n",
-    "    print(\"Best Params:\", grid.best_params_)\n",
-    "    print(\"Best Score:\", grid.best_score_)\n",
-    "    print(\"Results DataFrame:\")\n",
-    "    display(grid.cv_results_)  # Or print(grid.cv_results_) if not in Jupyter"
+    "    search.fit(X_train_scaled, y_train, X_val=X_test_scaled, y_val=y_test)\n",
+    "    print(\"Best Params:\", search.best_params_)\n",
+    "    print(\"Best Score:\", search.best_score_)"
    ]
   },
   {
