more gridsearch, more visuals

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2475,7 +2475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "8858d9ad",
    "metadata": {},
    "outputs": [
@@ -2492,7 +2492,7 @@
     }
    ],
    "source": [
-    "# Odds Ratios Table for Top Features\n",
+    "# Odds ratios for the features\n",
     "coef_df[\"odds_ratio\"] = np.exp(coef_df[\"coefficient\"])\n",
     "print(\"Top features with odds ratios:\")\n",
     "display(coef_df.loc[coef_df.index][[\"feature\", \"coefficient\", \"odds_ratio\"]])"
