added intercept interpretations

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2728,7 +2728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": null,
    "id": "64637b2b",
    "metadata": {},
    "outputs": [
@@ -3498,6 +3498,49 @@
     "coef_df[\"odds_ratio\"] = np.exp(coef_df[\"coefficient\"])\n",
     "print(\"All features with their odds ratios:\")\n",
     "display(coef_df.loc[coef_df.index][[\"feature\", \"coefficient\", \"odds_ratio\"]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "441eca3d",
+   "metadata": {},
+   "source": [
+    "For logistic regression, the **intercept** (bias) represents the model's prediction when all features are zero (as features are standardized, this means \"at the mean\" for the numerical features and 0 for the binary ones).\n",
+    "\n",
+    "- **Odds**:  \n",
+    "  The odds for the baseline case (all features zero) is given by `exp(intercept)`.  \n",
+    "  This tells you how much more likely the positive class (>50K income) is compared to the negative class (≤50K income) for a baseline individual.\n",
+    "\n",
+    "- **Probability**:  \n",
+    "  The probability for the baseline is given by the sigmoid function:  \n",
+    "  `1 / (1 + exp(-intercept))`  \n",
+    "  This is the predicted probability that a baseline individual earns >50K."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "id": "e7abed5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept (bias): -2.7491\n",
+      "Odds for baseline (all features zero): 0.0640\n",
+      "Probability for baseline (all features zero): 0.0601\n"
+     ]
+    }
+   ],
+   "source": [
+    "# intercept of the model\n",
+    "intercept = best_trainer.model.b\n",
+    "intercept_odds = np.exp(intercept)\n",
+    "intercept_prob = 1 / (1 + np.exp(-intercept))\n",
+    "print(f\"Intercept (bias): {intercept:.4f}\")\n",
+    "print(f\"Odds for baseline (all features zero): {intercept_odds:.4f}\")\n",
+    "print(f\"Probability for baseline (all features zero): {intercept_prob:.4f}\")"
    ]
   }
  ],
